--- a/public/demoARexperience.html
+++ b/public/demoARexperience.html
@@ -12,6 +12,12 @@
          See github.com/8thwall/web/tree/master/xrextras -->
     <script src="//cdn.8thwall.com/web/xrextras/xrextras.js"></script>
 
+    <script src="//cdn.8thwall.com/web/landing-page/landing-page.js"></script>
+
+    <script src="//cdn.8thwall.com/web/coaching-overlay/coaching-overlay.js"></script>
+
+
+
     <!-- 8thWall Web - Replace the app key here with your own app key -->
     <script async src="//apps.8thwall.com/xrweb?appKey=kBNWJKSJcgqo6oonGp9FRT2aY8SGJm5AkP2zG1PQlbAZH3QL9DqOIi4nXphv4E5CJqk9JC"></script>
 
